<resources>
    <string name="app_name">RoyalCrypto Exchange</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_up">Sign up</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_stud_profile">Profile</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email"</string>
    <string name="sign_up_as">Sign up as</string>
    <string name="sign_in_underline"><u>Sign in</u></string>
    <string name="sign_up_underline"><u>Sign up</u></string>
    <string name="text_terms"><u>Terms and Conditions</u></string>
    <string name="text_forget_password"><u>Forget your password?</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="array_support_title">

        <item>I want to report fraud</item>
        <item>I want to report a fraudulent trade</item>
        <item>I want to report a fraudulent user</item>
        <item>Help with a disputed trade</item>
        <item>Problems with a Bitcoin transaction</item>
        <item>My account is hacked</item>
        <item>I am a new user</item>
        <item>My account is on forced holiday</item>
        <item>I have a problem with my advertisement(s)</item>
        <item>I have received abusive feedback</item>
        <item>Report a bug</item>
        <item>I cant log in to my account</item>
        <item>I am not receiving the login guard email</item>
        <item>I do not have my two-factor authentication codes</item>
        <item>I have forgotten my password</item>
        <item>I have forgotten my username</item>
        <item>I have forgotten my email</item>
        <item>I have forgotten both my email and username</item>
        <item>I am not receiving my account verification email</item>
        <item>I am not able to verify my phone number</item>
        <item>Other</item>


    </string-array>

    <string-array name="array_currency">
        <item>PKR</item>
        <item>INR</item>
        <item>USR</item>
        <item>PHP</item>
        <item>PYG</item>
    </string-array>

    <string-array name="array_coin">
        <item>BTC</item>
        <item>XRP</item>
        <item>ETH</item>
        <item>EOS</item>
        <item>ADA</item>
        <item>LTC</item>
    </string-array>

    <string-array name="array_country">
        <item>Pakistan</item>
        <item>India</item>
        <item>Oman</item>
        <item>Chine</item>
    </string-array>
    <string-array name="array_offer">
        <item>All online offer</item>
        <item>Easypaisa</item>
        <item>advcash</item>
        <item>Chine</item>
    </string-array>

    <string-array name="search_options">
        <item>Coin</item>
        <item>user</item>
    </string-array>

    <string-array name="method_payment">
        <item>Easypaisa</item>
        <item>Bank Transfer</item>
        <item>Jazz Cash</item>
        <item>U Paisa</item>
        <item>Zong Pay</item>
    </string-array>

    <string-array name="time_array">
        <item>3 hours</item>
        <item>4 hours</item>
        <item>5 hours</item>
        <item>6 hours</item>
    </string-array>
    <string-array name="order_type">
        <item>Buy</item>
        <item>Sell</item>
    </string-array>

    <string-array name="banks_array">
        <item>Habib Bank</item>
        <item>Allied Bank</item>
        <item>MCB Bank</item>
        <item>Alfalah Bank</item>
        <item>National Bank</item>
        <item>State Bank</item>
    </string-array>


    <string name="title_activity_home">home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_drawer">DrawerActivity</string>

</resources>
