<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="Authorization"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="Create an account if you do not have one"
        android:textSize="15dp" />


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/editLableStyle">


            <EditText
                android:id="@+id/ed_password"
                style="@style/signUpEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Email"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/editLableStyle">


            <EditText
                android:id="@+id/user_email"
                style="@style/signUpEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:hint="@string/prompt_password"

                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_sign_up"
            android:onClick="signUp"
            android:text="@string/action_sign_in"
            android:textColor="@color/backgoundTheme"
            android:textSize="12sp"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="2"
                android:text="Registor a new account !!" />

            <TextView
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:onClick="signUp"
                android:text="@string/sign_up_underline" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
